--- a/index.html
+++ b/index.html
@@ -260,16 +260,41 @@
           <div class="info-dp-section">
             <div class="about-info">
               <p tabindex="0">
-                Hi! My name is Ozan. Actually, I am an agricultural engineer.
-                However, I have been interested in .Net technologies and
-                developing software since 2021.
+                &nbsp&nbsp&nbsp Merhaba! Ben Ozan Lütfü Akaydın, 19 Mayıs
+                Üniversitesi Ziraat Mühendisliği Bölümü'nden 2007 yılında mezun
+                oldum. Yazılıma olan tutkum, üniversitedeki ilk yıllarıma kadar
+                uzanıyor. Yaz stajımı yaptığım bir tarım işletmesinde kullanılan
+                süt sığırları için sürü takip uygulaması, bu alana olan ilgimi
+                ateşledi. Bir arkadaşımın bana verdiği
+                <u>Visual Basic</u> kurulum CD'si ile yazılıma ilk adımımı
+                attım. O dönemde yazılıma başlayan birçok kişi gibi ben de basit
+                bir hesap makinesi geliştirdim. Fakat o yıllarda internet ve
+                basılı kaynakların yetersiz olması ve çevremde yazılımla
+                ilgilenen kimse olmaması nedeniyle keyif aldığım bu alandan
+                uzaklaşmak zorunda kaldım.
+              </p>
+              <p tabindex="1">
+                &nbsp&nbsp&nbsp Mezun olduktan sonra kısa bir süre sorumlu
+                mühendis olarak çalıştım ve ardından 11 yıl boyunca özel bir
+                bankada görev aldım. Bankacılık sektöründeki deneyimlerim bana
+                finansal sistemler, planlama ve zaman yönetimi konusunda sağlam
+                bir bilgi birikimi kazandırdı. Bankacılık görevimi
+                sonlandırdıktan sonra çok keyif aldığım, severek yapabileceği
+                bildiğim ve içimde uhte kalan yazılıma geri döndüm.
+              </p>
+              <p tabindex="2">
+                &nbsp&nbsp&nbsp 2021 yılından beri Microsoft .NET teknolojileri
+                odaklı bir yazılım geliştirici olarak çalışıyorum. Yaklaşık bir
+                yıl boyunca bir oyun firmasında .NET back-end geliştirici olarak
+                görev aldım. Şu anda kendimi farklı teknolojilerde geliştirmeye
+                devam ediyor ve serbest projeler geliştiriyorum.
               </p>
               <br />
             </div>
 
             <div class="dp" data-aos="fade-up">
               <img
-                src="src/jpg/IMG_0690.JPG"
+                src="src/jpg/IMG_20211013_174650.jpg"
                 alt="Vinod Jangid"
                 tabindex="0"
                 aria-label="image of vinod"
@@ -320,6 +345,12 @@
                 </article>
               </div>
               <div class="language-name" data-aos="fade-up" id="html">
+                <article tabindex="0" aria-label="HTML">RestAPI</article>
+              </div>
+              <div class="language-name" data-aos="fade-up" id="html">
+                <article tabindex="0" aria-label="HTML">GraphQL</article>
+              </div>
+              <div class="language-name" data-aos="fade-up" id="html">
                 <article tabindex="0" aria-label="HTML">MsSQLServer</article>
               </div>
               <div class="language-name" data-aos="fade-up" id="html">
@@ -330,6 +361,20 @@
               </div>
               <div class="language-name" data-aos="fade-up" id="html">
                 <article tabindex="0" aria-label="HTML">MongoDB</article>
+              </div>
+              <div class="language-name" data-aos="fade-up" id="html">
+                <article tabindex="0" aria-label="HTML">Redis</article>
+              </div>
+              <div class="language-name" data-aos="fade-up" id="html">
+                <article tabindex="0" aria-label="HTML">
+                  Entity Framework
+                </article>
+              </div>
+              <div class="language-name" data-aos="fade-up" id="html">
+                <article tabindex="0" aria-label="HTML">Apache Kafka</article>
+              </div>
+              <div class="language-name" data-aos="fade-up" id="html">
+                <article tabindex="0" aria-label="HTML">RabbitMQ</article>
               </div>
               <div class="language-name" data-aos="fade-up" id="html">
                 <article tabindex="0" aria-label="HTML">Postman</article>
@@ -356,7 +401,9 @@
                 </article>
               </div>
               <div class="language-name" data-aos="fade-up" id="html">
-                <article tabindex="0" aria-label="HTML">CQRS</article>
+                <article tabindex="0" aria-label="HTML">
+                  CQRS - Mediator
+                </article>
               </div>
             </div>
           </div>
