--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
                 <u>Visual Basic</u> kurulum CD'si ile yazılıma ilk adımımı
                 attım. O dönemde yazılıma başlayan birçok kişi gibi ben de basit
                 bir hesap makinesi geliştirdim. Fakat o yıllarda internet ve
-                basılı kaynakların yetersiz olması ve çevremde yazılımla
-                ilgilenen kimse olmaması nedeniyle keyif aldığım bu alandan
-                uzaklaşmak zorunda kaldım.
+                basılı kaynakların yetersiz olması, çevremde yazılımla ilgilenen
+                birinin olmaması nedeniyle ilerleme sağlayamadım ve keyif
+                aldığım yazılıma ara vermek zorunda kaldım.
               </p>
               <p tabindex="1">
                 &nbsp&nbsp&nbsp Mezun olduktan sonra kısa bir süre sorumlu
