updated the page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 data-aos="fade-down"
                 data-aos-delay="100"
               >
-                Home
+                Anasayfa
               </li></a
             >
             <a href="#about" aria-label="about menu button">
@@ -61,7 +61,7 @@
                 data-aos="fade-down"
                 data-aos-delay="300"
               >
-                AboutMe
+                Hakkımda
               </li></a
             >
             <a href="#skills" aria-label="skills menu button">
@@ -71,7 +71,7 @@
                 data-aos="fade-down"
                 data-aos-delay="500"
               >
-                Skills
+                Beceriler
               </li></a
             >
           </ul>
@@ -107,7 +107,7 @@
               class="mobile-navbar-tabs-li home activeThismobiletab"
               onclick="hidemenubyli()"
             >
-              Home
+              Anasayfa
             </li></a
           >
           <a href="#about" tabindex="0" aria-label="about menu button">
@@ -116,7 +116,7 @@
               class="mobile-navbar-tabs-li about"
               onclick="hidemenubyli()"
             >
-              AboutMe
+              Hakkımda
             </li></a
           >
           <a href="#skills" tabindex="0" aria-label="skills menu button">
@@ -125,7 +125,7 @@
               class="mobile-navbar-tabs-li skills"
               onclick="hidemenubyli()"
             >
-              Skills
+              Beceriler
             </li></a
           >
         </ul>
@@ -175,7 +175,7 @@
           <div class="contact-btn-div" data-aos="fade-up" data-aos-delay="800">
             <a href="mailto:infovinodjangid@gmail.com" tabindex="-1">
               <button class="letsTalkBtn">
-                <p class="letsTalkBtn-text">Contact Me!</p>
+                <p class="letsTalkBtn-text">Email</p>
                 <span class="letsTalkBtn-BG"></span></button
             ></a>
             <div class="setting-container" id="setting-container">
@@ -212,19 +212,7 @@
               <div
                 class="soundtogglebuttoncontainer"
                 id="soundtogglebuttoncontainer"
-              >
-                <input
-                  type="checkbox"
-                  id="switchforsound"
-                  onclick="playpause()"
-                />
-                <label
-                  for="switchforsound"
-                  id="labelforsound"
-                  tabindex="0"
-                  aria-label="switch sound"
-                ></label>
-              </div>
+              ></div>
             </div>
             <!-- setting div ends -->
           </div>
@@ -240,7 +228,7 @@
             </svg>
           </div>
 
-          <div class="text">Resume</div>
+          <div class="text">Özgeçmiş</div>
         </button>
       </section>
       <!-- landing page ends here -->
@@ -252,7 +240,7 @@
               tabindex="0"
               aria-label="About me heading"
             >
-              &#60;/AboutMe&#62;
+              &#60;/Hakkımda&#62;
             </article>
             <p class="aboutHeadingP"></p>
           </div>
@@ -279,7 +267,7 @@
                 bankada görev aldım. Bankacılık sektöründeki deneyimlerim bana
                 finansal sistemler, planlama ve zaman yönetimi konusunda sağlam
                 bir bilgi birikimi kazandırdı. Bankacılık görevimi
-                sonlandırdıktan sonra çok keyif aldığım, severek yapabileceği
+                sonlandırdıktan sonra çok keyif aldığım, severek yapabileceğimi
                 bildiğim ve içimde uhte kalan yazılıma geri döndüm.
               </p>
               <p tabindex="2">
@@ -287,7 +275,7 @@
                 odaklı bir yazılım geliştirici olarak çalışıyorum. Yaklaşık bir
                 yıl boyunca bir oyun firmasında .NET back-end geliştirici olarak
                 görev aldım. Şu anda kendimi farklı teknolojilerde geliştirmeye
-                devam ediyor ve serbest projeler geliştiriyorum.
+                devam ediyor, serbest projeler geliştiriyorum.
               </p>
               <br />
             </div>
@@ -313,7 +301,7 @@
               tabindex="0"
               aria-label="skills heading"
             >
-              &#60;/Skills&#62;
+              &#60;/Beceriler&#62;
             </article>
             <p class="skillsHeadingP"></p>
           </div>
@@ -325,11 +313,14 @@
               tabindex="0"
               aria-label="As a backend a developer these are the skills i have"
             >
-              Tech Stack - Architectures
+              Tecnoloji - Mimariler
             </div>
             <div class="languages-section">
               <div class="language-name" data-aos="fade-up" id="html">
                 <article tabindex="0" aria-label="HTML">C#</article>
+              </div>
+              <div class="language-name" data-aos="fade-up" id="html">
+                <article tabindex="0" aria-label="HTML">Javascript</article>
               </div>
               <div class="language-name" data-aos="fade-up" id="html">
                 <article tabindex="0" aria-label="HTML">.Net Core</article>
@@ -343,6 +334,9 @@
                 <article tabindex="0" aria-label="HTML">
                   Asp.Net Core Mvc
                 </article>
+              </div>
+              <div class="language-name" data-aos="fade-up" id="html">
+                <article tabindex="0" aria-label="HTML">JQuery</article>
               </div>
               <div class="language-name" data-aos="fade-up" id="html">
                 <article tabindex="0" aria-label="HTML">RestAPI</article>
@@ -464,7 +458,7 @@
 
   <script>
     function openURL() {
-      var url = "src/pdf/Vinod Jangid Resume.pdf";
+      var url = "src/jpg/cv.jpg";
 
       window.open(url, "_blank");
     }
